# polaris

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  Dockerfile  LICENSE  README.md  WORKSPACE  readme.md
.github/workflows/: codeql.yml  release_build.yml
bazel/: examples_dependencies.bzl  examples_repositories.bzl  repositories.bzl
c/: .bazelrc  BUILD  CMakeLists.txt  Makefile  WORKSPACE
c/bazel/: repositories.bzl
c/examples/: BUILD  CMakeLists.txt  connection_retry.c  simple_polaris_client.c
c/examples/external_cmake_project/: CMakeLists.txt  main.c
c/src/point_one/polaris/: polaris.c  polaris.h  polaris_internal.c  polaris_internal.h  portability.c  portability.h  socket.h  socket_freertos.h  socket_posix.h
c/test/: application_base.py  run_unit_tests.sh  test_application.py  test_connection_retry.py  test_simple_polaris_client.py
cmake/: FindGflags.cmake
compilers/: BUILD.bazel  dependencies.bzl
compilers/arm/: dependencies.bzl
compilers/arm/linaro_linux_gcc_aarch64/: BUILD.bazel  aarch64-linux-gnu-ar  aarch64-linux-gnu-as  aarch64-linux-gnu-gcc  aarch64-linux-gnu-ld  aarch64-linux-gnu-nm  aarch64-linux-gnu-objcopy  aarch64-linux-gnu-objdump  aarch64-linux-gnu-strip  cc_toolchain_config.bzl  dependencies.bzl
compilers/arm/linaro_linux_gcc_armv7/: BUILD.bazel  arm-linux-gnueabihf-ar  arm-linux-gnueabihf-as  arm-linux-gnueabihf-gcc  arm-linux-gnueabihf-ld  arm-linux-gnueabihf-nm  arm-linux-gnueabihf-objcopy  arm-linux-gnueabihf-objdump  arm-linux-gnueabihf-strip  cc_toolchain_config.bzl  dependencies.bzl
compilers/k8/: BUILD.bazel  cc_toolchain_config.bzl
examples/: BUILD  CMakeLists.txt  asio_example.cc  sbf_framer.h  septentrio_example.cc  septentrio_interface.h  septentrio_service.h  serial_port_example.cc  simple_asio_serial_port.h  simple_embedded_client.cc  simple_polaris_client.cc
examples/data/: AsteRx_m2_config.txt
examples/external_cmake_project/: CMakeLists.txt  main.cc
examples/ntrip/: BUILD  CMakeLists.txt  connection.cc  connection.h  connection_manager.cc  connection_manager.h  header.h  index.html  mime_types.cc  mime_types.h  ntrip-proxy.service  ntrip_example.cc  ntrip_example_test_client.cc  ntrip_proxy.sh  ntrip_server.cc  ntrip_server.h  reply.cc  reply.h  request.h  request_handler.cc  request_handler.h  request_parser.cc  request_parser.h
examples/septentrio/: BUILD  sbf_framer.h  septentrio_interface.h  septentrio_service.h
include/point_one/: polaris.h  polaris_asio_client.h  polaris_asio_embedded_client.h  polaris_internal.h
src/point_one/polaris/: polaris_client.cc  polaris_client.h  polaris_interface.cc  polaris_interface.h  polarispp.cc  polarispp.h  polarispp_interface.cc  polarispp_interface.h
test/: cpp_application_base.py  run_unit_tests.sh  test_simple_polaris_client.py  test_simple_polaris_cpp_client.py
