package(default_visibility = ["//compilers/k8:__pkg__"])

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

filegroup(
    name = "empty",
    srcs = [],
)

cc_toolchain_config(
    name = "local_config",
    cpu = "k8",
)

cc_toolchain(
    name = "cc-compiler-k8",
    all_files = ":empty",
    ar_files = ":empty",
    as_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    tags = ["no-ide"],
    toolchain_config = ":local_config",
    toolchain_identifier = "local",
    visibility = ["//visibility:public"],
)
